Change the image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </head>
 
 <body>
-    <img src="image.png" class="fullscreen" />
+    <img src="image3.png" class="fullscreen" />
 </body>
 </html>
