--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8" />
-    <title>Demo Soutenance</title>
+    <title>Demo</title>
 
     <style>
     html, body {
